--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "discord.js": "^11.3.2",
     "get-youtube-id": "^1.0.0",
     "opusscript": "0.0.6",
+    "child_process": "1.0.2",
     "request": "^2.85.0",
     "simple-youtube-api": "^5.0.2",
     "youtube-info": "^1.2.0",
